@@ -17,6 +17,14 @@
  */
 package de.tudarmstadt.ukp.inception.doc;
 
+import static java.nio.file.Files.createDirectories;
+import static java.nio.file.Files.createDirectory;
+import static java.nio.file.Files.createSymbolicLink;
+import static java.nio.file.Files.exists;
+import static org.apache.commons.io.FileUtils.copyFile;
+import static org.apache.commons.io.FileUtils.deleteQuietly;
+import static org.apache.commons.io.FileUtils.listFiles;
+
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
@@ -24,14 +32,12 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 
-import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.filefilter.TrueFileFilter;
 import org.asciidoctor.Asciidoctor;
 import org.asciidoctor.Attributes;
 import org.asciidoctor.Options;
-import org.asciidoctor.OptionsBuilder;
 import org.asciidoctor.Placement;
 import org.asciidoctor.SafeMode;
 
@@ -43,21 +49,19 @@ public class GenerateDocumentation
     private static List<Path> getAsciiDocs(Path dir) throws IOException
     {
         return Files.list(dir).filter(Files::isDirectory) //
-                .filter(p -> Files.exists(p.resolve("pom.xml"))) //
+                .filter(p -> exists(p.resolve("pom.xml"))) //
                 .map(p -> p.resolve(asciiDocPath)) //
                 .filter(Files::isDirectory) //
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static void buildDoc(String type, Path outputDir) throws IOException
     {
-        Attributes attributes = Attributes.builder()
-                .attribute("source-dir", getInceptionDir() + "/")
+        var attributes = Attributes.builder().attribute("source-dir", getInceptionDir() + "/")
                 .attribute("include-dir",
                         outputDir.resolve("asciidoc").resolve(type).toString() + "/")
                 .attribute("imagesdir",
-                        outputDir.resolve("asciidoc").resolve(type).resolve("images").toString()
-                                + "/")
+                        outputDir.resolve("asciidoc").resolve(type).toString() + "/")
                 .docType("book") //
                 .attribute("toclevels", "8") //
                 .setAnchors(true) //
@@ -69,40 +73,28 @@ public class GenerateDocumentation
                 .tableOfContents(Placement.LEFT) //
                 .experimental(true) //
                 .build();
-        OptionsBuilder options = Options.builder() //
+        var options = Options.builder() //
                 .toDir(outputDir.toFile()) //
                 .safe(SafeMode.UNSAFE) //
                 .attributes(attributes);
-        Asciidoctor asciidoctor = Asciidoctor.Factory.create();
+
+        var asciidoctor = Asciidoctor.Factory.create();
         asciidoctor.requireLibrary("asciidoctor-diagram");
-        File f = new File(outputDir.resolve("asciidoc").resolve(type).toString() + ".adoc");
-        Files.createDirectories(f.getParentFile().toPath());
+
+        var f = new File(outputDir.resolve("asciidoc").resolve(type).toString() + ".adoc");
+        createDirectories(f.getParentFile().toPath());
         asciidoctor.convertFile(f, options.build());
     }
 
     public static void main(String... args) throws Exception
     {
-
-        Path inceptionDir = getInceptionDir();
-        Path outputDir = Paths.get(System.getProperty("user.dir")).resolve("target")
+        var inceptionDir = getInceptionDir();
+        var outputDir = Paths.get(System.getProperty("user.dir")).resolve("target")
                 .resolve("doc-out");
 
-        List<Path> modules = new ArrayList<>(getAsciiDocs(inceptionDir));
+        deleteQuietly(outputDir.toFile());
 
-        FileUtils.deleteQuietly(outputDir.toFile());
-        Files.createDirectory(outputDir);
-
-        for (Path module : modules) {
-            System.out.printf("Including module: %s\n", module);
-
-            for (File f : FileUtils.listFiles(module.toFile(), TrueFileFilter.INSTANCE,
-                    TrueFileFilter.INSTANCE)) {
-                Path p = f.toPath();
-                Path targetPath = f.toPath().subpath(module.toAbsolutePath().getNameCount(),
-                        p.toAbsolutePath().getNameCount());
-                FileUtils.copyFile(f, outputDir.resolve("asciidoc").resolve(targetPath).toFile());
-            }
-        }
+        linkDocFiles(inceptionDir, outputDir);
 
         buildDoc("user-guide", outputDir);
         buildDoc("developer-guide", outputDir);
@@ -111,9 +103,58 @@ public class GenerateDocumentation
         System.out.printf("Documentation written to: %s\n", outputDir);
     }
 
+    private static void copyDocFiles(Path inceptionDir, Path outputDir) throws IOException
+    {
+        createDirectory(outputDir);
+        var modules = new ArrayList<>(getAsciiDocs(inceptionDir));
+        for (var module : modules) {
+            System.out.printf("Including module: %s\n", module);
+
+            for (var f : listFiles(module.toFile(), TrueFileFilter.INSTANCE,
+                    TrueFileFilter.INSTANCE)) {
+                var p = f.toPath();
+                var targetPath = f.toPath().subpath(module.toAbsolutePath().getNameCount(),
+                        p.toAbsolutePath().getNameCount());
+                copyFile(f, outputDir.resolve("asciidoc").resolve(targetPath).toFile());
+            }
+        }
+    }
+
+    private static void linkDocFiles(Path inceptionDir, Path outputDir) throws IOException
+    {
+        // Create the output directory if it doesn't exist
+        createDirectory(outputDir);
+
+        // Get the list of module directories that contain AsciiDoc files
+        var modules = new ArrayList<>(getAsciiDocs(inceptionDir));
+
+        for (var module : modules) {
+            System.out.printf("Including module: %s\n", module);
+
+            // List all files in the current module
+            for (var f : listFiles(module.toFile(), TrueFileFilter.INSTANCE,
+                    TrueFileFilter.INSTANCE)) {
+                if (Set.of(".DS_Store").contains(f.getName())) {
+                    continue;
+                }
+
+                var p = f.toPath();
+                var targetPath = f.toPath().subpath(module.toAbsolutePath().getNameCount(),
+                        p.toAbsolutePath().getNameCount());
+                var linkPath = outputDir.resolve("asciidoc").resolve(targetPath);
+
+                // Create the parent directories for the linkPath if they don't exist
+                createDirectories(linkPath.getParent());
+
+                // Create a symbolic link pointing to the original file
+                createSymbolicLink(linkPath, p.toAbsolutePath());
+            }
+        }
+    }
+
     private static Path getInceptionDir()
     {
-        Path userDir = Paths.get(System.getProperty("user.dir"));
+        var userDir = Paths.get(System.getProperty("user.dir"));
         return runningFromIntelliJ() ? userDir.resolve("inception") : userDir.getParent();
     }
 
